--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <script type="module" src="src/script.js"></script>
 </body>
 </html>
